--- a/index.html
+++ b/index.html
@@ -7,30 +7,8 @@
     <title>Three.js 3D Text</title>
   </head>
   <body>
-    <canvas
-      ><!DOCTYPE html>
-      <html lang="en">
-        <head>
-          <meta charset="UTF-8" />
-          <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0"
-          />
-          <title>Custom 3D Text Class</title>
-          <link rel="stylesheet" href="style.css" />
-        </head>
-        <body>
-          <input
-            id="name"
-            type="text"
-            value="Filipe Freire"
-            style="position: absolute; z-index: 1"
-            autocomplete="off"
-          />
-          <canvas></canvas>
-        </body>
-      </html>
-    </canvas>
+    <input id="name" type="text" value="Filipe Freire" autocomplete="off" />
+    <canvas></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
